[package]
name = "typhoon_rainflow"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "typhoon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
numpy = "0.25"
ordered-float = "5.0.0"
rayon = "1.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
ahash = "0.8"