[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"


[project]
name = "typhoon"
description = "Fast rainflow counting for streaming input written in Rust"
authors = [{ email = "mw@technokrat.ch" }, { name = "Markus Wegmann" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy"]


[tool.maturin]
features = ["pyo3/extension-module"]

[project.optional-dependencies]
test = ["nox"]
